--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>SMA Negeri 1 Tanjung Raja</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
+  <meta name="google-site-verification" content="LTpx-P383MFTsUTq1XsWeXsIVbeIO3t4EH5_M_ZayOA" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
