--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <section class="slider" id="slider">
   <div class="slides">
     <div class="slide active">
-      <img src="Selamat Datang.png" alt="Foto 1">
+      <img src="Selamat datang.png" alt="Foto 1">
     </div>
     <div class="slide">
       <img src="IMG-20241028-WA0107.jpg" alt="Foto 2">
@@ -511,7 +511,7 @@ Buku Aku Kenal Siapa Diriku
         <iframe src="https://drive.google.com/file/d/1MHLmfrdi_Hzf-Gt9Sh15OqYc2lSSfRCd/preview" width="100%" height="200px" allow="autoplay"></iframe>
         
         <!-- Tautan untuk mengarahkan ke PDF penuh -->
-        <a href="https://drive.google.com/file/d/1MHLmfrdi_Hzf-Gt9Sh15OqYc2lSSfRCd/view?usp=drivesdk" target="_blank">
+        <a href="https://drive.google.com/file/d/1Q4DxVJzzzbN45EPLrPAqynsWptPvIAZS/view?usp=drivesdk" target="_blank">
           <button class="btn btn-primary">Lihat PDF Lengkap</button>
         </a>
                 <div class="profile mt-auto">
