--- a/index.html
+++ b/index.html
@@ -259,8 +259,7 @@
               <img src="IMG-20250107-WA0004.jpg", width="100%", height="200px", max-height="300px">
               <h3>Hebat! Siswa-Siswi SMAN 1 Tanjung Raja membuat buku berjudul " Aku Kenal Siapa Diriku".</h3>
               <p>
-                Peresmian dan launching Buku "Aku Kenal Siapa Diriku" oleh Kepala SMAN 1 Tanjung Raja. Buku ini merupakan...
-              </p>
+                Pada selasa, 7 Januari 2025, siswa-siswi SMAN 1 Tanjung Raja telah menerbitkan sebuah buku berjudul "Aku Kenal Siapa Diriku", yang diresmikan langsung oleh Kepala SMAN 1 Tanjung Raja. Buku ini merupakan...     </p>
               <ul>
               <p></p>
               <a href="#" class="btn more-btn">Selengkapnya</a>
