--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 Pada selasa, 7 Januari 2025, siswa-siswi SMAN 1 Tanjung Raja telah menerbitkan sebuah buku berjudul "Aku Kenal Siapa Diriku", yang diresmikan langsung oleh Kepala SMAN 1 Tanjung Raja. Buku ini merupakan...     </p>
               <ul>
               <p></p>
-              <a href="#" class="btn more-btn">Selengkapnya</a>
+              <a href="https://sman1tra.github.io/Artikel/Berita1/" class="btn more-btn">Selengkapnya</a>
             </div>
 
           </div>
