--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <p data-aos="fade-up" data-aos-delay="100">Bermutu Bidang Akademik, Kreatif dalam Karya, dan Berakhlak Mulia.<br></p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
             <a href="https://sman1tra.github.io/Profil/Sekolah/" class="btn-get-started">Selengkapnya</a>
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Galeri Video</span></a>
+            <a href="https://youtube.com/@sman1tanjungraja?si=CoKSNT8FOUjjFaV" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Galeri Video</span></a>
           </div>
         </div>
       </div>
