--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>SMA Negeri 1 Tanjung Raja</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <meta name="google-site-verification" content="LTpx-P383MFTsUTq1XsWeXsIVbeIO3t4EH5_M_ZayOA" />
+<meta name="google-site-verification" content="LTpx-P383MFTsUTq1XsWeXsIVbeIO3t4EH5_M_ZayOA" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -59,10 +59,10 @@
                 </ul>
             <li class="dropdown"><a href="#"><span>Layanan</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Ekstrakurikuler</a></li>
-                  <li><a href="#">PPDB 2024</a></li>
-                  <li><a href="#">E-learning</a></li>
-                  <li><a href="#">Media Sosial</a></li>
+                  <li><a href="https://sman1tra.github.io/Ekstrakurikuler/">Ekstrakurikuler</a></li>
+                  <li><a href="ppdb.html">PPDB 2024</a></li>
+                  <li><a href="https://sman1tra.github.io/E-learning/">E-learning</a></li>
+                  <li><a href="https://sman1tra.github.io/Medsos/">Media Sosial</a></li>
                 </ul>
             <li class="dropdown"><a href="#"><span>Galeri</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
@@ -70,7 +70,7 @@
                   <li><a href="https://sman1tra.github.io/Galeri/Video/">Galeri Video</a></li>
                 </ul>
           <li><a href="https://sman1tra.github.io/Artikel/">Artikel</a></li>
-          <li><a href="index.html#contact">Hubungi Kami</a></li>
+          <li><a href="https://sman1tra.github.io/About/">Hubungi Kami</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -83,7 +83,7 @@
 <section class="slider" id="slider">
   <div class="slides">
     <div class="slide active">
-      <img src="Selamat datang.png" alt="Foto 1">
+      <img src="Selamat Datang.png" alt="Foto 1">
     </div>
     <div class="slide">
       <img src="IMG-20241028-WA0107.jpg" alt="Foto 2">
@@ -236,6 +236,7 @@
 
           <div class="col-lg-5 d-flex align-items-center" data-aos="fade-up" data-aos-delay="200">
             <div class="content">
+            <img src="Foto Ibu Sutinawati.png" class="img">
               <h3>Sambutan Kepala SMAN 1 Tanjung Raja</h3>
             <p align="justify">Bismillahirrohmanirrohim</p><p align="justify">Assalamualaikum Wr.Wb</p><p align="justify">Salam sehat serta sejahtera bagi kita semua</p>
 <p align="justify">Selamat datang di website resmi SMAN 1 Tanjung Raja.</p>
@@ -256,10 +257,12 @@
           <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
 
             <div class="content">
-              <img src="IMG-20250107-WA0004.jpg", width="100%", height="200px", max-height="300px">
+              <img src="IMG-20250107-WA0004.jpg", width="100%", height="30%">
+              <p></p>
               <h3>Hebat! Siswa-Siswi SMAN 1 Tanjung Raja membuat buku berjudul " Aku Kenal Siapa Diriku".</h3>
               <p>
-                Pada selasa, 7 Januari 2025, siswa-siswi SMAN 1 Tanjung Raja telah menerbitkan sebuah buku berjudul "Aku Kenal Siapa Diriku", yang diresmikan langsung oleh Kepala SMAN 1 Tanjung Raja. Buku ini merupakan...     </p>
+                Peresmian dan launching Buku "Aku Kenal Siapa Diriku" oleh Kepala SMAN 1 Tanjung Raja. Buku ini merupakan...
+              </p>
               <ul>
               <p></p>
               <a href="https://sman1tra.github.io/Artikel/" class="btn more-btn">Selengkapnya</a>
@@ -296,7 +299,7 @@
               <div>
                 <h3>PPDB 2024</h3>
                 <p>Lihat info Penerimaan Peserta Didik Baru (PPDB) 2024</p>
-                <a href="#" class="read-more stretched-link">Selengkapnya <i class="bi bi-arrow-right"></i></a>
+                <a href="https://sman1tra.github.io/ppdb.html/" class="read-more stretched-link">Selengkapnya <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -307,7 +310,7 @@
               <div>
                 <h3>Profil</h3>
                 <p>SMA Negeri 1 Tanjung Raja merupakan SMA Negeri di Kabupaten Ogan Ilir Provinsi Sumatera Selatan yang didirikan pada tahun...</p>
-                <a href="#" class="read-more stretched-link">Selengkapnya <i class="bi bi-arrow-right"></i></a>
+                <a href="https://sman1tra.github.io/Profil/Sekolah" class="read-more stretched-link">Selengkapnya <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -318,7 +321,7 @@
               <div>
                 <h3>E-Learning</h3>
                 <p>Materi, Buku, Modul dan Soal Latihan</p>
-                <a href="#" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+                <a href="https://sman1tra.github.io/E-learning/" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -329,7 +332,7 @@
               <div>
                 <h3>Galeri</h3>
                 <p>Galeri foto dan video SMA Negeri 1 Tanjung Raja</p>
-                <a href="#" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+                <a href="https://sman1tra.github.io/Galeri/Foto/" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -340,7 +343,7 @@
               <div>
                 <h3>Acara dan Pengumuman</h3>
                 <p>Informasi pengumuman dan acara SMAN 1 Tanjung Raja</p>
-                <a href="#" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+                <a href="https://sman1tra.github.io/Medsos/" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -351,7 +354,7 @@
               <div>
                 <h3>Artikel dan Berita</h3>
                 <p>Artikel dan berita seputar SMAN 1 Tanjung Raja</p>
-                <a href="#" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
+                <a href="https://sman1tra.github.io/Artikel/" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -507,10 +510,10 @@ Buku Aku Kenal Siapa Diriku
       </p>
       <div class="profile mt-auto">
         <!-- Menampilkan gambar halaman pertama PDF -->
-        <iframe src="https://drive.google.com/file/d/1Q4DxVJzzzbN45EPLrPAqynsWptPvIAZS/preview" width="100%" height="400px" allow="autoplay"></iframe>
+        <iframe src="https://drive.google.com/file/d/1Q4DxVJzzzbN45EPLrPAqynsWptPvIAZS/preview" width="100%", height="400px" allow="autoplay"></iframe>
         
         <!-- Tautan untuk mengarahkan ke PDF penuh -->
-        <a href="https://drive.google.com/file/d/1Q4DxVJzzzbN45EPLrPAqynsWptPvIAZS/view?usp=drivesdk" target="_blank">
+        <a href="https://drive.google.com/file/d/1MHLmfrdi_Hzf-Gt9Sh15OqYc2lSSfRCd/view?usp=drivesdk" target="_blank">
           <button class="btn btn-primary">Lihat PDF Lengkap</button>
         </a>
                 <div class="profile mt-auto">
@@ -613,7 +616,6 @@ Buku Aku Kenal Siapa Diriku
             <p><strong>Email:</strong> <span>sman1tgraja@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100087815304725&mibextid=ZbWKwL"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/ospksmantra?igsh=eHZvam0zbmRiZ2w3"><i class="bi bi-instagram"></i></a>
             <a href="https://youtube.com/@sman1tanjungraja?si=CoKSNT8FOUjjFaV"><i class="bi bi-youtube"></i></a>
@@ -623,11 +625,11 @@ Buku Aku Kenal Siapa Diriku
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Beranda</a></li>
+            <li><a href="https://sman1tra.github.io/Home/">Beranda</a></li>
             <li><a href="https://sman1tra.github.io/Profil/Sekolah/">Profil</a></li>
             <li><a href="https://sman1tra.github.io/Artikel/">Artikel</a></li>
             <li><a href="https://sman1tra.github.io/Galeri/Foto/">Galeri</a></li>
-            <li><a href="#">Hubungi Kami</a></li>
+            <li><a href="https://sman1tra.github.io/About/">Hubungi Kami</a></li>
           </ul>
         </div>
 
@@ -661,4 +663,4 @@ Buku Aku Kenal Siapa Diriku
 
 </body>
 
-</html>
+          </html>
