--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <section class="slider" id="slider">
   <div class="slides">
     <div class="slide active">
-      <img src="Selamat Datang.png" alt="Foto 1">
+      <img src="Selamat datang.png" alt="Foto 1">
     </div>
     <div class="slide">
       <img src="IMG-20241028-WA0107.jpg" alt="Foto 2">
