--- a/index.html
+++ b/index.html
@@ -267,7 +267,35 @@
               <p></p>
               <a href="https://sman1tra.github.io/Artikel/" class="btn more-btn">Selengkapnya</a>
             </div>
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
+            <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
+          </div>
 
+        </div><!-- Features Item -->
+
+        <div class="row gy-4 justify-content-between features-item">
+
+          <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="content">
+              <img src="IMG-20250110-WA0015.jpg", width="100%", height="30%">
+              <p></p>
+              <h3>Sosialisasi  pengenalan minat, bakat, dan potensi siswa sebagai Langkah...</h3>
+              <p>
+                SMAN 1 Tanjung Raja mengadakan sosialisasi bagi siswa  kelas X sekaligus memperkenalkan buku karya siswa-siswi SMAN 1 Tanjung Raja yang...
+              </p>
+              <ul>
+              <p></p>
+              <a href="https://sman1tra.github.io/Artikel/" class="btn more-btn">Selengkapnya</a>
+            </div>
+
+          </div>
+
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
+            <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
+          </div>
+
+        </div><!-- Features Item -->
           </div>
 
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
