--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
               <div>
                 <h3>PPDB 2024</h3>
                 <p>Lihat info Penerimaan Peserta Didik Baru (PPDB) 2024</p>
-                <a href="https://sman1tra.github.io/ppdb.html/" class="read-more stretched-link">Selengkapnya <i class="bi bi-arrow-right"></i></a>
+                <a href="ppdb.html" class="read-more stretched-link">Selengkapnya <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Item -->
