--- a/index.html
+++ b/index.html
@@ -259,10 +259,9 @@
             <div class="content">
               <img src="IMG-20250107-WA0004.jpg", width="100%", height="30%">
               <p></p>
-              <h3>Hebat! Siswa-Siswi SMAN 1 Tanjung Raja membuat buku berjudul " Aku Kenal Siapa Diriku".</h3>
-              <p>
-                Peresmian dan launching Buku "Aku Kenal Siapa Diriku" oleh Kepala SMAN 1 Tanjung Raja. Buku ini merupakan...
-              </p>
+              <h3>Ajarkan Siswa rasa empati dan saling berbagi, SMAN 1 Tanjung Raja adakan Pesantren Kilat dan SMANTRA Berbagi</h3>
+              <p>SMAN 1 Tanjung Raja mengadakan Pesantren Kilat Ramadhan dan SMANTRA Berbagi. Acara ini di selenggarakan selama 3 Hari dari 17-20 Maret 2025
+                           </p>
               <ul>
               <p></p>
               <a href="https://sman1tra.github.io/Artikel/" class="btn more-btn">Selengkapnya</a>
@@ -280,10 +279,10 @@
             <div class="content">
               <img src="IMG-20250110-WA0015.jpg", width="100%", height="30%">
               <p></p>
-              <h3>Sosialisasi  pengenalan minat, bakat, dan potensi siswa sebagai Langkah...</h3>
+              <h3>Hebat! Siswa-Siswi SMAN 1 Tanjung Raja membuat buku berjudul " Aku Kenal Siapa Diriku".</h3>
               <p>
-                SMAN 1 Tanjung Raja mengadakan sosialisasi bagi siswa  kelas X sekaligus memperkenalkan buku karya siswa-siswi SMAN 1 Tanjung Raja yang...
-              </p>
+                Peresmian dan launching Buku "Aku Kenal Siapa Diriku" oleh Kepala SMAN 1 Tanjung Raja. Buku ini merupakan...
+     </p>
               <ul>
               <p></p>
               <a href="https://sman1tra.github.io/Artikel/" class="btn more-btn">Selengkapnya</a>
