--- a/index.html
+++ b/index.html
@@ -556,11 +556,21 @@ Buku Aku Kenal Siapa Diriku
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Launching Fitur baru Website SMAN 1 Tanjung Raja Versi 1.2
+                  PENGUMUMAN KELULUSAN SISWA/I SMAN 1 TANJUNG RAJA
                 </p>
                 <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                  <h3>SMA Negeri 1 Tanjung Raja</h3>
+                        </p>
+      <div class="profile mt-auto">
+        <!-- Menampilkan gambar halaman pertama PDF -->
+        <iframe src="https://drive.google.com/file/d/1Q4DxVJzzzbN45EPLrPAqynsWptPvIAZS/preview" width="100%", height="400px" allow="autoplay"></iframe>
+        
+        <!-- Tautan untuk mengarahkan ke PDF penuh -->
+        <a href="https://drive.google.com/file/d/1MHLmfrdi_Hzf-Gt9Sh15OqYc2lSSfRCd/view?usp=drivesdk" target="_blank">
+          <button class="btn btn-primary">Lihat PDF Lengkap</button>
+        </a>
+                <div class="profile mt-auto">
+                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                    <h3>SMA Negeri 1 Tanjung Raja</h3>
                   <h4>09 Januari 2025</h4>
                 </div>
               </div>
