--- a/index.html
+++ b/index.html
@@ -257,6 +257,24 @@
           <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
 
             <div class="content">
+              <p></p>
+              <h3>PENGUMUMAN KELULUSAN KELAS 12 SMAN 1 TANJUNG RAJA TAHUN PELAJARAN 2024/2025</h3>
+              <p>Assalamualaikum Wr.Wb</p>
+              <p>Selamat kepada siswa/siswi kelas 12 angkatan ke 43 tahun pelajaran 2024/2025 SMAN 1 Tanjung Raja atas kelulusannya.</p>
+              <p>Untuk melihat info lebih lengkap, silahkan klik tombol di bawah ini.</p>
+              <ul>
+              <p></p>
+              <a href="https://sman1tra.github.io/Artikel/" class="btn more-btn">Link Kelulusan</a>
+            </div>
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
+            <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
+          </div>
+
+        <div class="row gy-4 justify-content-between features-item">
+
+          <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="content">
               <img src="IMG-20250319-WA0004.jpg", width="100%", height="30%">
               <p></p>
               <h3>Ajarkan Siswa rasa empati dan saling berbagi, SMAN 1 Tanjung Raja adakan Pesantren Kilat dan SMANTRA Berbagi</h3>
@@ -550,31 +568,6 @@ Buku Aku Kenal Siapa Diriku
     </div>
   </div>
 </div><!-- End testimonial item -->
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  PENGUMUMAN KELULUSAN SISWA/I SMAN 1 TANJUNG RAJA
-                </p>
-                <div class="profile mt-auto">
-                        </p>
-      <div class="profile mt-auto">
-        <!-- Menampilkan gambar halaman pertama PDF -->
-        <iframe src="https://drive.google.com/file/d/1Q4DxVJzzzbN45EPLrPAqynsWptPvIAZS/preview" width="100%", height="400px" allow="autoplay"></iframe>
-        
-        <!-- Tautan untuk mengarahkan ke PDF penuh -->
-        <a href="https://drive.google.com/file/d/1MHLmfrdi_Hzf-Gt9Sh15OqYc2lSSfRCd/view?usp=drivesdk" target="_blank">
-          <button class="btn btn-primary">Lihat PDF Lengkap</button>
-        </a>
-                <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                    <h3>SMA Negeri 1 Tanjung Raja</h3>
-                  <h4>09 Januari 2025</h4>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
 
           </div>
           <div class="swiper-pagination"></div>
