--- a/index.html
+++ b/index.html
@@ -260,12 +260,13 @@
               <p></p>
               <h3>PENGUMUMAN KELULUSAN KELAS 12 SMAN 1 TANJUNG RAJA TAHUN PELAJARAN 2024/2025</h3>
               <p>Assalamualaikum Wr.Wb</p>
-              <p>Selamat kepada siswa/siswi kelas 12 angkatan ke 43 tahun pelajaran 2024/2025 SMAN 1 Tanjung Raja atas kelulusannya.</p>
-              <p>Untuk melihat info lebih lengkap, silahkan klik tombol di bawah ini.</p>
+              <p>Selamat dan sukses kepada siswa/siswi kelas 12 angkatan ke 43 tahun pelajaran 2024/2025 SMAN 1 Tanjung Raja atas kelulusannya.</p>
+              <p>Untuk melihat kelulusan, silahkan klik tombol di bawah ini.</p>
               <ul>
               <p></p>
-              <a href="https://sman1tra.github.io/Artikel/" class="btn more-btn">Link Kelulusan</a>
+              <a href="s.id/KELULUSANSMANTRA2025" class="btn more-btn">Link Kelulusan</a>
             </div>
+            <p>Silahkan masukan NISN anda, untuk memastikan kelulusan anda!</p>
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
           </div>
