--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
           </div>
-
+</div><!-- Features Item -->
+            
         <div class="row gy-4 justify-content-between features-item">
 
           <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
