--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
               <ul>
               <p></p>
               <a href="s.id/KELULUSANSMANTRA2025" class="btn more-btn">Link Kelulusan</a>
-            <p>Silahkan masukan NISN anda, untuk memastikan kelulusan anda!</p>
-            </div>
+            <p>Silahkan masukan NISN anda, untuk memastikan kelulusan anda!</a>
               </ul>
+            </div>
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
           </div>
