--- a/index.html
+++ b/index.html
@@ -265,11 +265,13 @@
               <ul>
               <p></p>
               <a href="s.id/KELULUSANSMANTRA2025" class="btn more-btn">Link Kelulusan</a>
+                <p></p>
             <p>Silahkan masukan NISN anda, untuk memastikan kelulusan anda!</a>
               </ul>
             </div>
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
+          </div>
           </div>
 </div><!-- Features Item -->
             
@@ -290,7 +292,7 @@
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
           </div>
-
+          </div>
         </div><!-- Features Item -->
 
         <div class="row gy-4 justify-content-between features-item">
