--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <p>Untuk melihat kelulusan, silahkan klik tombol di bawah ini.</p>
               <ul>
               <p></p>
-              <a href="s.id/KELULUSANSMANTRA2025" class="btn more-btn">Link Kelulusan</a>
+              <a href="https://lookerstudio.google.com/u/0/reporting/82856a6d-500c-4de0-8075-c3913dbbcc2b/page/aoCJF" class="btn more-btn">Link Kelulusan</a>
                 <p></p>
             <p>Silahkan masukan NISN anda, untuk memastikan kelulusan anda!</a>
               </ul>
