--- a/index.html
+++ b/index.html
@@ -251,7 +251,30 @@
           </div>
 
         </div><!-- Features Item -->
-        
+
+        <div class="row gy-4 justify-content-between features-item">
+
+          <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="content">
+              <p></p>
+              <h3>PENGUMUMAN KELULUSAN KELAS XII TAHUN PELAJARAN 2024/2025</h3>
+              <p>Selamat dan sukses kepada siswa/siswi kelas 12 angkatan ke 43 tahun pelajaran 2024/2025 SMAN 1 Tanjung Raja atas kelulusannya.</p>
+              <p>Dapat dilihat pada link di bawah berikut.</p>
+              <ul>
+              <p></p>
+              <a href="https://lookerstudio.google.com/u/0/reporting/82856a6d-500c-4de0-8075-c3913dbbcc2b/page/aoCJF" class="btn more-btn">Link Kelulusan</a>
+                <p></p>
+            <p>Silahkan masukan NISN anda, untuk memastikan kelulusan anda!</p>
+                <p>Selamat dan Sukses!!</p>
+              </ul>
+            </div>
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
+            <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
+          </div>
+          </div>
+</div><!-- Features Item -->
+            
         <div class="row gy-4 justify-content-between features-item">
 
           <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
