--- a/ppdb.html
+++ b/ppdb.html
@@ -97,8 +97,22 @@
           <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
 
             <div class="content">
-              <h3>PPDB 2025 belum dibuka!</h3>
-              <p>Lihat informasi resmi PPDB SMAN 1 Tanjung Raja hanya di website resmi SMAN 1 Tanjung Raja.</p>
+              
+              <h3>SPMB 2025 telah dibuka!!</h3>
+              <p>SMAN 1 Tanjung Raja resmi membuka Seleksi Penerimaan Murid Baru (SPMB) 2025 bagi siswa SMP/MTs yang telah memenuhi kriteria dan syarat. Berikut Jalur SPMB SMAN 1 Tanjung Raja tahun 2025 :</p>
+              <p> 1. Jalur Afirmasi</p>
+              <p> 2. Jalur Mutasi</p>
+              <p> 3. Jalur Prestasi (Akademik dan Non Akademik)</p>
+              <p> 4. Jalur Domisili</p>
+              <p> 5. Jalur Prestasi TKA</p>
+              <p>Bagi yang ingin mendaftar silahkan klik link di bawah ini.</p>
+              <a href="https://bit.ly/PENDAFTARANONLINESMANTRA2025" target="_blank">
+          <button class="btn btn-primary">Daftar SPMB 2025</button>
+              </a>
+              <p>Ayo segera mendaftar dan menjadi bagian SMA Negeri 1 Tanjung Raja.</p>
+              <p>Pantau terus media sosial dan website resmi SMAN 1 Tanjung Raja untuk informasi lebih lanjut.</p>
+              <p>SMANTRA!!!</p>
+              <p>Tobo Pacak, Pacak Tobo, Pacak Gale!!!</p>
             </div>
           </div>
           </section>
@@ -151,7 +165,7 @@ Buku Aku Kenal Siapa Diriku
       </p>
       <div class="profile mt-auto">
         <!-- Menampilkan gambar halaman pertama PDF -->
-        <iframe src="https://drive.google.com/file/d/1MHLmfrdi_Hzf-Gt9Sh15OqYc2lSSfRCd/preview" width="100%" height="200px" allow="autoplay"></iframe>
+        <iframe src="https://drive.google.com/file/d/1Q4DxVJzzzbN45EPLrPAqynsWptPvIAZS/preview" width="100%", height="400px" allow="autoplay"></iframe>
         
         <!-- Tautan untuk mengarahkan ke PDF penuh -->
         <a href="https://drive.google.com/file/d/1Q4DxVJzzzbN45EPLrPAqynsWptPvIAZS/view?usp=drivesdk" target="_blank">
