--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <li class="dropdown"><a href="#"><span>Layanan</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="https://sman1tra.github.io/Ekstrakurikuler/">Ekstrakurikuler</a></li>
-                  <li><a href="ppdb.html">PPDB 2024</a></li>
+                  <li><a href="ppdb.html">SPMB 2025</a></li>
                   <li><a href="https://sman1tra.github.io/E-learning/">E-learning</a></li>
                   <li><a href="https://sman1tra.github.io/Medsos/">Media Sosial</a></li>
                 </ul>
