--- a/ppdb.html
+++ b/ppdb.html
@@ -97,7 +97,8 @@
           <div class="col-lg-5 d-flex align-items-center order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
 
             <div class="content">
-              
+              <img src="IMG-20250110-WA0015.jpg", width="100%", height="30%">
+              <p></p>
               <h3>SPMB 2025 telah dibuka!!</h3>
               <p>SMAN 1 Tanjung Raja resmi membuka Seleksi Penerimaan Murid Baru (SPMB) 2025 bagi siswa SMP/MTs yang telah memenuhi kriteria dan syarat. Berikut Jalur SPMB SMAN 1 Tanjung Raja tahun 2025 :</p>
               <p> 1. Jalur Afirmasi</p>
