--- a/ppdb.html
+++ b/ppdb.html
@@ -107,7 +107,7 @@
               <p> 4. Jalur Domisili</p>
               <p> 5. Jalur Prestasi TKA</p>
               <p>Bagi yang ingin mendaftar silahkan klik link di bawah ini.</p>
-              <a href="https://bit.ly/PENDAFTARANONLINESMANTRA2025" target="_blank">
+              <a href="" target="_blank">
           <button class="btn btn-primary">Daftar SPMB 2025</button>
               </a>
               <p>Ayo segera mendaftar dan menjadi bagian SMA Negeri 1 Tanjung Raja.</p>
