--- a/ppdb.html
+++ b/ppdb.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Hebat! Siswa-Siswi SMAN 1 Tanjung Raja membuat buku berjudul " Aku Kenal Siapa Diriku".</h3>
+  <title>SPMB SMAN 1 Tanjung Raja 2025</h3>
             </title>
   <meta name="description" content="">
   <meta name="keywords" content="">
