--- a/ppdb.html
+++ b/ppdb.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>SPMB SMAN 1 Tanjung Raja 2025</h3>
-            </title>
+  <title>SPMB SMAN 1 Tanjung Raja 2025</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
