--- a/ppdb.html
+++ b/ppdb.html
@@ -85,7 +85,7 @@
       </div>
       <div class="container text-center">
         <div class="d-flex flex-column justify-content-center align-items-center">
-          <h1 data-aos="fade-up">PPDB<span> SMAN 1 Tanjung Raja<span></h1>
+          <h1 data-aos="fade-up">SPMB<span> SMAN 1 Tanjung Raja<span></h1>
         </div>
       </div>
     </section><!-- /Hero Section -->
