--- a/ppdb.html
+++ b/ppdb.html
@@ -100,11 +100,12 @@
               <p></p>
               <h3>SPMB 2025 telah dibuka!!</h3>
               <p>SMAN 1 Tanjung Raja resmi membuka Seleksi Penerimaan Murid Baru (SPMB) 2025 bagi siswa SMP/MTs yang telah memenuhi kriteria dan syarat. Berikut Jalur SPMB SMAN 1 Tanjung Raja tahun 2025 :</p>
-              <p> 1. Jalur Afirmasi</p>
-              <p> 2. Jalur Mutasi</p>
-              <p> 3. Jalur Prestasi (Akademik dan Non Akademik)</p>
-              <p> 4. Jalur Domisili</p>
-              <p> 5. Jalur Prestasi TKA</p>
+              <p> 1. Jalur Domisili</p>
+              <p> 2. Jalur Afirmasi</p>
+              <p> 3. Jalur Mutasi</p>
+              <p> 3. a. Jalur Prestasi Akademik</p>
+              <p>    b. Jalur Prestasi Non Akademik</p>
+              <p> 5. Jalur Prestasi Tes Kemampuan Akademik (TKA)</p>
               <p>Bagi yang ingin mendaftar silahkan klik link di bawah ini.</p>
               <a href="" target="_blank">
           <button class="btn btn-primary">Daftar SPMB 2025</button>
