--- a/ppdb.html
+++ b/ppdb.html
@@ -107,7 +107,7 @@
               <p>    b. Jalur Prestasi Non Akademik</p>
               <p> 5. Jalur Prestasi Tes Kemampuan Akademik (TKA)</p>
               <p>Bagi yang ingin mendaftar silahkan klik link di bawah ini.</p>
-              <a href="" target="_blank">
+              <a href="https://bit.ly/PENDAFTARANONLINESMANTRA2025" target="_blank">
           <button class="btn btn-primary">Daftar SPMB 2025</button>
               </a>
               <p></p>
